ipfs-cluster/ipfs-operator/overlays/production/service-cluster.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ipfs-cluster-ipfs-cluster-0
spec:
  ports:
  - name: api
    port: 5001
    protocol: TCP
    targetPort: api
  - name: api-http
    port: 9094
    protocol: TCP
    targetPort: api-http
  - name: proxy-http
    port: 9095
    protocol: UDP
    targetPort: proxy-http
  selector:
    statefulset.kubernetes.io/pod-name: ipfs-cluster-ipfs-cluster-0
  type: ClusterIP
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: ipfs-cluster-ipfs-cluster-headless
# spec:
#   ports:
#   - name: api
#     port: 5001
#     protocol: TCP
#     targetPort: api
#   - name: api-http
#     port: 9094
#     protocol: TCP
#     targetPort: api-http
#   - name: proxy-http
#     port: 9095
#     protocol: UDP
#     targetPort: proxy-http
#   selector:
#     app.kubernetes.io/name: ipfs-cluster-ipfs-cluster
#   type: ClusterIP
#   clusterIP: None
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: ipfs-cluster-ipfs-cluster-externalname
# spec:
#   ports:
#   - name: api
#     port: 5001
#     protocol: TCP
#     targetPort: api
#   - name: api-http
#     port: 9094
#     protocol: TCP
#     targetPort: api-http
#   - name: proxy-http
#     port: 9095
#     protocol: UDP
#     targetPort: proxy-http
#   selector:
#     app.kubernetes.io/name: ipfs-cluster-ipfs-cluster
#   type: ExternalName
#   externalName: ipfs-cluster-ipfs-cluster-0.ipfs-cluster-ipfs-cluster.ipfs-operator-system.svc.cluster.local
