ipfs-cluster/ipfs-operator/overlays/production/ingress-cluster.yaml
---
# Service resource will be generated by IpfsCluster.cluster.ipfs.io/v1alpha1
# 除非要測試 ipfs-cluster (如使用 ipfs-cluster-ctl)，否則不要公開
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
  labels:
    app.kubernetes.io/name: ipfs-cluster-ipfs-cluster
  name: ipfs-cluster-ipfs-cluster-cluster
spec:
  rules:
  - host: ipfs-cluster-internal.see2.club
    http:
      paths:
      - backend:
          service:
            name: ipfs-cluster-ipfs-cluster-0
            port:
              name: proxy-http
              # name: api-http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ipfs-cluster-internal.see2.club
    secretName: ipfs-cluster-internal-cert
