ipfs-cluster/ipfs-operator/overlays/production/ingress.yaml
---
# Service resource will be generated by IpfsCluster.cluster.ipfs.io/v1alpha1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
  labels:
    app.kubernetes.io/name: ipfs-cluster-ipfs-cluster
  name: ipfs-cluster-ipfs-cluster
spec:
  # ingressClassName: ""
  rules:
  - host: ipfs-cluster.see2.club
    http:
      paths:
      - backend:
          service:
            name: ipfs-cluster-ipfs-cluster
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
      # - backend: # websocket
      #     service:
      #       name: ipfs-cluster-ipfs-cluster
      #       port:
      #         name: ws
      #   path: /
      #   pathType: ImplementationSpecific
  tls:
  - hosts:
    - ipfs-cluster.see2.club
    secretName: ipfs-cluster-cert
